# python_basics

./: .gitignore  README.md  basic_principles_part1.ipynb  pyproject.toml
class/: buffer.py  counter.py  moneybox.py  new.py
ffmeme/: watermark2.py  watermark3.py  watermark_4.py  watermark_ffmemesbot.py
matrix/: euclid_dist.py  matrix_operation.py  matrix_outer.py
namespaces/: create_namespaces.py  fahrenheit.py
reexpressions/: catastrophic_backtracking.py  catcat.py  find_cat.py  replace_char.py  replace_duplicated_char.py  tandem_repetition.py  zzz.py
sum_numbers/: c_n_k.py  closest_mode.py  objects_in_list.py  sum_sequence.py
